--- a/app/views/players/index.html.haml
+++ b/app/views/players/index.html.haml
@@ -1,26 +1,28 @@
-%script{:src => "http://js.pusher.com/2.0/pusher.min.js", :type => "text/javascript"}
-%input{:type => "hidden", :value => "#{@session_id}"}
+%script{:src => 'http://js.pusher.com/2.0/pusher.min.js', :type => 'text/javascript'}
+%input#user_session_token{:type => 'hidden', :value => "#{@session_id}"}
 
-- unless @game_state == PlayersController::STATE_PLAYING
-  .notification{:style => "font-size: 20px;"}
+.notifications-container.for-popup-messaging
 
-  .create_room_container{:style => "padding:10px; margin: 10px; border: 10px solid lightgrey;"}
-    You is a first user. Please, create a session:
-    %br
-    %span{:style => "display: inline-block;width: 90px;"}
-      Row size:
-    %input.rows{:type => "text", :value => ""}
-    %br
-    %span{:style => "display: inline-block;width: 90px;"}
-      Columns size:
-    %input.cols{:type => "text", :value => ""}
-    %input.create_room{:type => "button", :value => "create"}
-- else
+.game-board.hidden-initially
+
+- if (@room_state == GAME_ROOM_STATE_PLAYING || @current_user)
+  /You appears inside ready game room! Start to play!
   :javascript
-    $.post('/players/draw_game_board.js')
+    drawGameBoard
 
-/render later with ajax
-.game_board
+- else
+  /Controls panel, for new game room creating
+  .create-room-panel
+    Create a game room or wait until somebody creates one
+    %br
+    %span.input-title
+      Row count:
+    %input.rows{:type => 'text', :value => '', :placeholder => "#{GAME_ROOM_MIN_DIMENSION} - #{GAME_ROOM_MAX_DIMENSION} cells"}
+    %br
+    %span.input-title
+      Columns count:
+    %input.cols{:type => 'text', :value => '', :placeholder => "#{GAME_ROOM_MIN_DIMENSION} - #{GAME_ROOM_MAX_DIMENSION} cells"}
+    %input.create-room{:type => 'button', :value => 'Create!'}
 
 
 :javascript
@@ -30,65 +32,64 @@
     if (window.console && window.console.log) window.console.log(message);
   };
   WEB_SOCKET_DEBUG = true;
-  // End loggin implementation
+  // End pusher logging configuration
 
-  var pusher = new Pusher("#{PlayersController::API_KEY}");
-  var channel = pusher.subscribe("#{PlayersController::CHANNEL_NAME}");
+  var pusher = new Pusher("#{PUSHER_API_KEY}");
+  var channel = pusher.subscribe("#{PUSHER_CHANNEL_NAME}");
 
+  channel.bind("#{PUSHER_EVENT_ALERT}", alertEvent);
+  channel.bind('#{PUSHER_EVENT_WAIT}', waitingEvent);
+  channel.bind('#{PUSHER_EVENT_START}', startingEvent);
 
-  channel.bind('client-event', clientEvent);
-
-  channel.bind('#{PlayersController::WAITING}', waitingEvent);
-  channel.bind('#{PlayersController::START}', startingEvent);
-
-
-  function clientEvent(data) {
-    if (data.type == 'user-disconnected' && data.id == "#{@session_id}") {
-      alert("your session will be destroyed");
-    } else {
-      alert(data.message);
-    }
+  //Notification pusher event that triggers, when one player sends a message to another
+  function alertEvent(data) {
+    showNotification(data.message);
   }
+  //Notification pusher event, that triggers when user creates a game room, and ready to wait for second player
   function waitingEvent(data) {
-    $('.create_room_container').fadeOut();
-    $('.notification').fadeOut();
-    $('.notification').html('Waiting for guest connecting..');
-    $('.notification').fadeIn();
+    $('.create-room-panel').fadeOut();
+    showNotification('Waiting for guest connecting..');
   }
+  //Notification pusher event, that triggers when second player connecting to game room
   function startingEvent(data) {
-    $.post('/players/draw_game_board.js')
+    drawGameBoard();
   }
 
+  //Helper function: display simple notification message
+  function showNotification(message) {
+    //#$('.notifications-container').slideUp();
+    $('.notifications-container').html(message);
+    $('notifications-container').fadeIn();
+    console.log(123);
+  }
+
+  //Helper function: draw game board of current room
+  function createRoomSignal() {
+    // create REST
+    rows_count = $('.rows').val();
+    cols_count = $('.cols').val();
+    $.post('players', { rows: rows_count, cols: cols_count })
+  }
+
+  //Helper function: draw game board of current room
+  function drawGameBoard() {
+    $.post('/players/draw_game_board.js');
+  }
+
+  //Helper function: server notifing with `user disconnected from game room` event
+  function sendLogoutSignal() {
+    $.post('/players/logout_user');
+  }
+
+  //Attempt to trigger `user disconnected` event
   $(window).bind('beforeunload', function(){
-    $.post('/players/logout_user')
+    alert('aaa');
+    sendLogoutSignal();
   });
 
-
+  //Document ready, bind event method:
   jQuery(document).ready(function($) {
-   $(".create_room").click(function(){
-     // create REST
-     $.post('players', {rows: $('.rows').val(), cols: $('.cols').val()   })
+   $(".create-room").click(function(){
+     createRoomSignal();
    });
   });
-
-
-
-
-
-
-  //function subscriptionSuccess(members) {
-  //  // we won't use members here
-  //  channel.trigger('client-event', {"message": "message world"});
-  // }
-  //channel.bind("#{GameEvents::OPPONENT_CONNECTED}", function(data) {
-  //  alert('Opponent connected');
-  //});
-  //channel.bind("#{GameEvents::OPPONENT_DISCONNECTED}", function(data) {
-  //    alert('Opponent disconnected');
-  //});
-
-  //$(window).bind('beforeunload', function() {
-  //  channel.trigger("#{GameEvents::OPPONENT_DISCONNECTED}", { your: 'hello' });
-  //});
-  //channel.bind('pusher:subscription_succeeded', function() {
-  //});
