--- a/app/assets/stylesheets/games_controller.css.scss
+++ b/app/assets/stylesheets/games_controller.css.scss
@@ -4,8 +4,10 @@
 
 
 .notifications-container {
-  font-size: 30px;
-  color: red;
+  font-size: 15px;
+  color: blue;
+  font-weight: bold;
+  text-shadow: 0px 0px 0px #fff,1px 1px 0em #fff;
 }
 
 .create-room-panel {
@@ -17,6 +19,10 @@
     display: inline-block;
     width: 130px;
   }
+}
+
+.green {
+  background-color: green!important;
 }
 
 .game-board {
@@ -35,17 +41,6 @@
 .selected_cell_1 {
   background-color: red;
 }
-
 .selected_cell_2 {
   background-color: black;
-
-}
-
-
-
-.selected {
- background-color: black;
-}
-.selected-red {
-  background-color: red;
 }
